--- a/index.html
+++ b/index.html
@@ -12,26 +12,32 @@
 </head>
 <body>
     <div class="mobile-container">
-        <div class="nav fs16px dflex justify-center ac fw600">
-            <a href="#home" class="is_active">
-                <span>
-                    <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_30_9240)"><path d="M20.5 20C20.5 20.2652 20.3946 20.5196 20.2071 20.7071C20.0196 20.8947 19.7652 21 19.5 21H5.5C5.23478 21 4.98043 20.8947 4.79289 20.7071C4.60536 20.5196 4.5 20.2652 4.5 20V11H1.5L11.827 1.61201C12.0111 1.44449 12.2511 1.35165 12.5 1.35165C12.7489 1.35165 12.9889 1.44449 13.173 1.61201L23.5 11H20.5V20ZM18.5 19V9.15701L12.5 3.70301L6.5 9.15701V19H18.5ZM12.5 17L9.141 13.641C8.93207 13.4321 8.76633 13.184 8.65326 12.9111C8.54018 12.6381 8.48199 12.3455 8.48199 12.05C8.48199 11.7545 8.54018 11.462 8.65326 11.189C8.76633 10.916 8.93207 10.6679 9.141 10.459C9.34993 10.2501 9.59797 10.0843 9.87096 9.97127C10.1439 9.8582 10.4365 9.8 10.732 9.8C11.0275 9.8 11.3201 9.8582 11.593 9.97127C11.866 10.0843 12.1141 10.2501 12.323 10.459L12.5 10.636L12.677 10.459C12.8859 10.2501 13.134 10.0843 13.407 9.97127C13.6799 9.8582 13.9725 9.8 14.268 9.8C14.5635 9.8 14.8561 9.8582 15.129 9.97127C15.402 10.0843 15.6501 10.2501 15.859 10.459C16.0679 10.6679 16.2337 10.916 16.3467 11.189C16.4598 11.462 16.518 11.7545 16.518 12.05C16.518 12.3455 16.4598 12.6381 16.3467 12.9111C16.2337 13.184 16.0679 13.4321 15.859 13.641L12.5 17Z" fill="#09121F"/></g></svg>
-                    <span class="nav__item">Home</span>
-                </span>
-            </a>
-            <a href="#menu">
-                <span>
-                    <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_30_9246)"><path d="M21.5 2V22H19.5V15H15.5V8C15.5 6.4087 16.1321 4.88258 17.2574 3.75736C18.3826 2.63214 19.9087 2 21.5 2ZM19.5 4.53C18.67 5 17.5 6.17 17.5 8V13H19.5V4.53ZM9.5 13.9V22H7.5V13.9C6.37081 13.6691 5.35599 13.0554 4.62714 12.1625C3.8983 11.2697 3.50014 10.1526 3.5 9V3H5.5V10H7.5V3H9.5V10H11.5V3H13.5V9C13.4999 10.1526 13.1017 11.2697 12.3729 12.1625C11.644 13.0554 10.6292 13.6691 9.5 13.9Z" fill="#09121F"/></g></svg>                    
-                    <span class="nav__item">Menu</span>
-                </span>
-            </a>
-            <a href="#venue">
-                <span>
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_30_9251)"><path d="M12 20.9L16.95 15.95C17.9289 14.971 18.5955 13.7237 18.8655 12.3659C19.1356 11.008 18.9969 9.60061 18.4671 8.32157C17.9373 7.04253 17.04 5.94932 15.8889 5.18018C14.7378 4.41104 13.3844 4.00052 12 4.00052C10.6156 4.00052 9.26221 4.41104 8.11108 5.18018C6.95995 5.94932 6.06274 7.04253 5.53291 8.32157C5.00307 9.60061 4.86441 11.008 5.13445 12.3659C5.40449 13.7237 6.0711 14.971 7.05 15.95L12 20.9ZM12 23.728L5.636 17.364C4.37734 16.1053 3.52018 14.5017 3.17292 12.7559C2.82566 11.01 3.0039 9.20044 3.68509 7.55591C4.36628 5.91139 5.51984 4.50579 6.99988 3.51686C8.47992 2.52793 10.22 2.00009 12 2.00009C13.78 2.00009 15.5201 2.52793 17.0001 3.51686C18.4802 4.50579 19.6337 5.91139 20.3149 7.55591C20.9961 9.20044 21.1743 11.01 20.8271 12.7559C20.4798 14.5017 19.6227 16.1053 18.364 17.364L12 23.728ZM12 13C12.5304 13 13.0391 12.7893 13.4142 12.4142C13.7893 12.0392 14 11.5304 14 11C14 10.4696 13.7893 9.96087 13.4142 9.5858C13.0391 9.21073 12.5304 9.00001 12 9.00001C11.4696 9.00001 10.9609 9.21073 10.5858 9.5858C10.2107 9.96087 10 10.4696 10 11C10 11.5304 10.2107 12.0392 10.5858 12.4142C10.9609 12.7893 11.4696 13 12 13ZM12 15C10.9391 15 9.92171 14.5786 9.17157 13.8284C8.42142 13.0783 8 12.0609 8 11C8 9.93915 8.42142 8.92173 9.17157 8.17159C9.92171 7.42144 10.9391 7.00001 12 7.00001C13.0609 7.00001 14.0783 7.42144 14.8284 8.17159C15.5786 8.92173 16 9.93915 16 11C16 12.0609 15.5786 13.0783 14.8284 13.8284C14.0783 14.5786 13.0609 15 12 15Z" fill="#09121F"/></g></svg>                    
-                    <span class="nav__item">Venue</span>
-                </span>
-            </a>
-        </div>
+        <ul class="nav list-unstyled fs16px dflex justify-center ac fw600">
+            <li class="is_active">
+                <a href="#home" class="scroll__link">
+                    <span>
+                        <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_30_9240)"><path d="M20.5 20C20.5 20.2652 20.3946 20.5196 20.2071 20.7071C20.0196 20.8947 19.7652 21 19.5 21H5.5C5.23478 21 4.98043 20.8947 4.79289 20.7071C4.60536 20.5196 4.5 20.2652 4.5 20V11H1.5L11.827 1.61201C12.0111 1.44449 12.2511 1.35165 12.5 1.35165C12.7489 1.35165 12.9889 1.44449 13.173 1.61201L23.5 11H20.5V20ZM18.5 19V9.15701L12.5 3.70301L6.5 9.15701V19H18.5ZM12.5 17L9.141 13.641C8.93207 13.4321 8.76633 13.184 8.65326 12.9111C8.54018 12.6381 8.48199 12.3455 8.48199 12.05C8.48199 11.7545 8.54018 11.462 8.65326 11.189C8.76633 10.916 8.93207 10.6679 9.141 10.459C9.34993 10.2501 9.59797 10.0843 9.87096 9.97127C10.1439 9.8582 10.4365 9.8 10.732 9.8C11.0275 9.8 11.3201 9.8582 11.593 9.97127C11.866 10.0843 12.1141 10.2501 12.323 10.459L12.5 10.636L12.677 10.459C12.8859 10.2501 13.134 10.0843 13.407 9.97127C13.6799 9.8582 13.9725 9.8 14.268 9.8C14.5635 9.8 14.8561 9.8582 15.129 9.97127C15.402 10.0843 15.6501 10.2501 15.859 10.459C16.0679 10.6679 16.2337 10.916 16.3467 11.189C16.4598 11.462 16.518 11.7545 16.518 12.05C16.518 12.3455 16.4598 12.6381 16.3467 12.9111C16.2337 13.184 16.0679 13.4321 15.859 13.641L12.5 17Z" fill="#09121F"/></g></svg>
+                        <span class="nav__item">Home</span>
+                    </span>
+                </a>
+            </li>
+            <li>
+                <a href="#menu" class="scroll__link">
+                    <span>
+                        <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_30_9246)"><path d="M21.5 2V22H19.5V15H15.5V8C15.5 6.4087 16.1321 4.88258 17.2574 3.75736C18.3826 2.63214 19.9087 2 21.5 2ZM19.5 4.53C18.67 5 17.5 6.17 17.5 8V13H19.5V4.53ZM9.5 13.9V22H7.5V13.9C6.37081 13.6691 5.35599 13.0554 4.62714 12.1625C3.8983 11.2697 3.50014 10.1526 3.5 9V3H5.5V10H7.5V3H9.5V10H11.5V3H13.5V9C13.4999 10.1526 13.1017 11.2697 12.3729 12.1625C11.644 13.0554 10.6292 13.6691 9.5 13.9Z" fill="#09121F"/></g></svg>                    
+                        <span class="nav__item">Menu</span>
+                    </span>
+                </a>
+            </li>
+            <li>
+                <a href="#venue" class="scroll__link">
+                    <span>
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_30_9251)"><path d="M12 20.9L16.95 15.95C17.9289 14.971 18.5955 13.7237 18.8655 12.3659C19.1356 11.008 18.9969 9.60061 18.4671 8.32157C17.9373 7.04253 17.04 5.94932 15.8889 5.18018C14.7378 4.41104 13.3844 4.00052 12 4.00052C10.6156 4.00052 9.26221 4.41104 8.11108 5.18018C6.95995 5.94932 6.06274 7.04253 5.53291 8.32157C5.00307 9.60061 4.86441 11.008 5.13445 12.3659C5.40449 13.7237 6.0711 14.971 7.05 15.95L12 20.9ZM12 23.728L5.636 17.364C4.37734 16.1053 3.52018 14.5017 3.17292 12.7559C2.82566 11.01 3.0039 9.20044 3.68509 7.55591C4.36628 5.91139 5.51984 4.50579 6.99988 3.51686C8.47992 2.52793 10.22 2.00009 12 2.00009C13.78 2.00009 15.5201 2.52793 17.0001 3.51686C18.4802 4.50579 19.6337 5.91139 20.3149 7.55591C20.9961 9.20044 21.1743 11.01 20.8271 12.7559C20.4798 14.5017 19.6227 16.1053 18.364 17.364L12 23.728ZM12 13C12.5304 13 13.0391 12.7893 13.4142 12.4142C13.7893 12.0392 14 11.5304 14 11C14 10.4696 13.7893 9.96087 13.4142 9.5858C13.0391 9.21073 12.5304 9.00001 12 9.00001C11.4696 9.00001 10.9609 9.21073 10.5858 9.5858C10.2107 9.96087 10 10.4696 10 11C10 11.5304 10.2107 12.0392 10.5858 12.4142C10.9609 12.7893 11.4696 13 12 13ZM12 15C10.9391 15 9.92171 14.5786 9.17157 13.8284C8.42142 13.0783 8 12.0609 8 11C8 9.93915 8.42142 8.92173 9.17157 8.17159C9.92171 7.42144 10.9391 7.00001 12 7.00001C13.0609 7.00001 14.0783 7.42144 14.8284 8.17159C15.5786 8.92173 16 9.93915 16 11C16 12.0609 15.5786 13.0783 14.8284 13.8284C14.0783 14.5786 13.0609 15 12 15Z" fill="#09121F"/></g></svg>                    
+                        <span class="nav__item">Venue</span>
+                    </span>
+                </a>
+            </li>
+        </ul>
         <div class="banner position-relative" id="home">
             <div class="banner__overlay position-absolute dflex align-items-center">
                 <div class="banner__content ac spacer">
@@ -55,7 +61,7 @@
             <img src="images/banner.jpg" alt="" class="banner__img position-absolute">
         </div>
 
-        <div class="menu" id="menu">
+        <div class="menu pt24px" id="menu">
             <div class="pb120px px24px">
                 <h2>Food Menu</h2>
                 <div class="tab dflex">
@@ -163,7 +169,7 @@
             </div>
         </div>
 
-        <div class="venue" id="venue">
+        <div class="venue pt24px" id="venue">
             <div class="pb120px">
                 <div class="px24px">
                     <h2>Raj Vatika</h2>
@@ -181,6 +187,52 @@
     <script src="js/jquery-3.5.1.min.js" type="text/javascript"></script>
 
     <script>
+        /* $(".scroll__link").click(function (e){
+            e.preventDefault();
+            var hash = this.hash.substr(1);
+            jQuery('html, body').animate({
+            scrollTop: jQuery("#"+ hash).offset().top - 50
+            }, 800);
+            $(this).siblings(".scroll__link").removeClass("is_active");
+            $(this).addClass("is_active");
+        }); */
+
+        $(document).ready(function(){
+            var lastId,
+            topMenu = $(".nav"),
+            menuItems = topMenu.find("a"),
+            scrollItems = menuItems.map(function () {
+                var item = $($(this).attr("href"));
+                if (item.length) {
+                return item;
+                }
+            });
+            menuItems.click(function (e) {
+                var href = $(this).attr("href"),
+                offsetTop = href === "#" ? 0 : $(href).offset().top + 1;
+                $('html, body').stop().animate({
+                scrollTop: offsetTop
+                }, 1200);
+                e.preventDefault();
+            });
+            $(window).scroll(function () {
+                var fromTop = $(this).scrollTop();
+                var cur = scrollItems.map(function () {
+                if ($(this).offset().top <= fromTop)
+                    return this;
+                });
+                cur = cur[cur.length - 1];
+                var id = cur && cur.length ? cur[0].id : "";
+
+                if (lastId !== id) {
+                lastId = id;
+                menuItems
+                .parent().removeClass("is_active")
+                .end().filter("[href='#" + id + "']").parent().addClass("is_active");
+                }
+            });
+        });
+
         $(".tab__item").click(function (e){
             e.preventDefault();
             var href = $(this).data("target");
