--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&family=Viaoda+Libre&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 </head>
 <body>
     <div class="mobile-container">
@@ -24,8 +25,8 @@
             <li>
                 <a href="#menu" class="scroll__link">
                     <span>
-                        <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_30_9246)"><path d="M21.5 2V22H19.5V15H15.5V8C15.5 6.4087 16.1321 4.88258 17.2574 3.75736C18.3826 2.63214 19.9087 2 21.5 2ZM19.5 4.53C18.67 5 17.5 6.17 17.5 8V13H19.5V4.53ZM9.5 13.9V22H7.5V13.9C6.37081 13.6691 5.35599 13.0554 4.62714 12.1625C3.8983 11.2697 3.50014 10.1526 3.5 9V3H5.5V10H7.5V3H9.5V10H11.5V3H13.5V9C13.4999 10.1526 13.1017 11.2697 12.3729 12.1625C11.644 13.0554 10.6292 13.6691 9.5 13.9Z" fill="#09121F"/></g></svg>                    
-                        <span class="nav__item">Menu</span>
+                        <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_30_10082)"><path d="M17.863 11.045C19.267 9.65201 21.543 9.65201 22.947 11.045C24.351 12.439 24.351 14.699 22.947 16.092L17.5 21.5L12.053 16.092C10.649 14.699 10.649 12.439 12.053 11.045C13.457 9.65201 15.733 9.65201 17.137 11.045L17.5 11.405L17.863 11.045V11.045ZM19.743 4.75701C20.683 5.70001 21.246 6.87501 21.432 8.09501C20.099 7.84701 18.693 8.08501 17.5 8.80801C15.35 7.50501 12.506 7.77801 10.644 9.62601C8.513 11.741 8.454 15.141 10.466 17.327L10.644 17.512L13.065 19.916L11.5 21.485L3.02 12.993C0.917 10.637 0.996 7.01901 3.257 4.75701C5.522 2.49301 9.145 2.41701 11.501 4.52901C13.85 2.42001 17.48 2.49001 19.743 4.75701V4.75701Z" fill="#151110"/></g></svg>                                               
+                        <span class="nav__item">Gallery</span>
                     </span>
                 </a>
             </li>
@@ -63,109 +64,39 @@
 
         <div class="menu pt24px" id="menu">
             <div class="pb120px px24px">
-                <h2>Food Menu</h2>
-                <div class="tab dflex">
-                    <div class="tab__item is_active" data-target="veg"><strong>Veg</strong></div>
-                    <div class="tab__item" data-target="nonveg"><strong>Non-veg</strong></div>
-                </div>
-
-                <div class="tab__content">
-                    <div id="veg" class="tab__pane is_active">
-                        <div class="mt24px">
-                            <div class="fs24px libre">Indian Chaat</div>
-                            <div class="food dflex">
-                                <div class="food__item">
-                                    <div class="food__overlay position-absolute">Pani Poori</div>
-                                    <img src="images/panipoori.jpg" alt="" class="food__img">
-                                </div>
-                                <div class="food__item">
-                                    <div class="food__overlay position-absolute">Aloo Tikki</div>
-                                    <img src="images/alootikki.jpg" alt="" class="food__img">
-                                </div>
-                                <div class="food__item">
-                                    <div class="food__overlay position-absolute">Dahi Bhalla</div>
-                                    <img src="images/dahibhalla.jpg" alt="" class="food__img">
-                                </div>
-                                <div class="food__item">
-                                    <div class="food__overlay position-absolute">Besan Chilla</div>
-                                    <img src="images/besanchilla.jpg" alt="" class="food__img">
-                                </div>
-                                <div class="food__item">
-                                    <div class="food__overlay position-absolute">Mashroom Tikka</div>
-                                    <img src="images/mashroomtikka.jpg" alt="" class="food__img">
-                                </div>
-                                <div class="food__item">
-                                    <div class="food__overlay position-absolute">French Fries</div>
-                                    <img src="images/frenchfries.jpg" alt="" class="food__img">
-                                </div>
-                                <div class="food__item">
-                                    <div class="food__overlay position-absolute">Chilli Paneer</div>
-                                    <img src="images/chillipaneer.jpg" alt="" class="food__img">
-                                </div>
-                                <div class="food__item">
-                                    <div class="food__overlay position-absolute">Paneer Tikka</div>
-                                    <img src="images/paneertikka.jpg" alt="" class="food__img">
-                                </div>
-                            </div>
-                        </div>
-        
-                        <div class="mt48px pt24px" style="border-top: 1px solid #525252;">
-                            <div class="fs24px libre">Indian Cuisine</div>
-                            <div class="food dflex">
-                                <div class="food__item">
-                                    <div class="food__overlay position-absolute">dal makhani</div>
-                                    <img src="images/dalmakhani.jpg" alt="" class="food__img">
-                                </div>
-                                <div class="food__item">
-                                    <div class="food__overlay position-absolute">shahi paneer</div>
-                                    <img src="images/shahipaneer.jpg" alt="" class="food__img">
-                                </div>
-                                <div class="food__item">
-                                    <div class="food__overlay position-absolute">chole</div>
-                                    <img src="images/chole.jpg" alt="" class="food__img">
-                                </div>
-                                <div class="food__item">
-                                    <div class="food__overlay position-absolute">mix veg</div>
-                                    <img src="images/mixveg.jpg" alt="" class="food__img">
-                                </div>
-                            </div>
-                        </div>
+                <h2>Photo Gallery</h2>
+                <div class="gallery mt48px">
+                    <div class="item">
+                        <a data-fancybox="gallery" href="images/img1.jpg"><img src="images/img1.jpg"></a>
                     </div>
-
-                    <div id="nonveg" class="tab__pane">
-                        <div class="mt24px">
-                            <!-- <div class="fs24px libre">Mughlai</div> -->
-                            <div class="food dflex">
-                                <div class="food__item">
-                                    <div class="food__overlay position-absolute">chicken curry</div>
-                                    <img src="images/chickencurry.jpg" alt="" class="food__img">
-                                </div>
-                                <div class="food__item">
-                                    <div class="food__overlay position-absolute">butter chicken</div>
-                                    <img src="images/butterchicken.jpg" alt="" class="food__img">
-                                </div>
-                                <div class="food__item">
-                                    <div class="food__overlay position-absolute">chicken korma</div>
-                                    <img src="images/chickenkorma.jpg" alt="" class="food__img">
-                                </div>
-                                <div class="food__item">
-                                    <div class="food__overlay position-absolute">mutton curry</div>
-                                    <img src="images/muttoncurry.jpg" alt="" class="food__img">
-                                </div>
-                                <div class="food__item">
-                                    <div class="food__overlay position-absolute">mutton korma</div>
-                                    <img src="images/muttonkorma.jpg" alt="" class="food__img">
-                                </div>
-                                <div class="food__item">
-                                    <div class="food__overlay position-absolute">chicken biryani</div>
-                                    <img src="images/chickenbiryani.jpg" alt="" class="food__img">
-                                </div>
-                            </div>
-                        </div>
+                    <div class="item">
+                        <a data-fancybox="gallery" href="images/img2.jpg"><img src="images/img2.jpg"></a>
+                    </div>
+                    <div class="item">
+                        <a data-fancybox="gallery" href="images/img3.jpg"><img src="images/img3.jpg"></a>
+                    </div>
+                    <div class="item">
+                        <a data-fancybox="gallery" href="images/img4.jpg"><img src="images/img4.jpg"></a>
+                    </div>
+                    <div class="item">
+                        <a data-fancybox="gallery" href="images/img5.jpg"><img src="images/img5.jpg"></a>
+                    </div>
+                    <div class="item">
+                        <a data-fancybox="gallery" href="images/img6.jpg"><img src="images/img6.jpg"></a>
+                    </div>
+                    <div class="item">
+                        <a data-fancybox="gallery" href="images/img7.jpg"><img src="images/img7.jpg"></a>
+                    </div>
+                    <div class="item">
+                        <a data-fancybox="gallery" href="images/img8.jpg"><img src="images/img8.jpg"></a>
+                    </div>
+                    <div class="item">
+                        <a data-fancybox="gallery" href="images/img9.jpg"><img src="images/img9.jpg"></a>
+                    </div>
+                    <div class="item">
+                        <a data-fancybox="gallery" href="images/img10.jpg"><img src="images/img10.jpg"></a>
                     </div>
                 </div>
-
-
             </div>
         </div>
 
@@ -185,17 +116,9 @@
     </div>
     
     <script src="js/jquery-3.5.1.min.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 
     <script>
-        /* $(".scroll__link").click(function (e){
-            e.preventDefault();
-            var hash = this.hash.substr(1);
-            jQuery('html, body').animate({
-            scrollTop: jQuery("#"+ hash).offset().top - 50
-            }, 800);
-            $(this).siblings(".scroll__link").removeClass("is_active");
-            $(this).addClass("is_active");
-        }); */
 
         $(document).ready(function(){
             var lastId,
@@ -231,15 +154,6 @@
                 .end().filter("[href='#" + id + "']").parent().addClass("is_active");
                 }
             });
-        });
-
-        $(".tab__item").click(function (e){
-            e.preventDefault();
-            var href = $(this).data("target");
-            $(this).parent().children().siblings(".tab__item").removeClass("is_active");
-            $(this).addClass("is_active");
-            $(".tab__content").find(".tab__pane").removeClass("is_active");
-            $(".tab__content").find("#" + href).addClass("is_active");
         });
     </script>
 </body>
